--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   meta: ^0.9.0
 dev_dependencies:
   test: ^0.12.3+9
+  dogma_codegen_test:
+    path: ../dogma-codegen-test
 dependency_overrides:
   dogma_convert:
     path: ../dogma-convert
