--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,20 +6,17 @@ homepage: http://dogma-dart.github.io/
 environment:
   sdk: '>=1.14.0-any <2.0.0'
 dependencies:
-  dogma_convert: ^0.0.1
+  build:
+    path: ../build
+  dogma_convert:
+    path: ../dogma-convert
   dogma_codegen:
     path: ../dogma-codegen
   dogma_source_analyzer:
     path: ../dogma-source-analyzer
   logging: ^0.11.1+1
-  meta: ^0.9.0
+  meta: ^0.10.0
 dev_dependencies:
   test: ^0.12.3+9
   dogma_codegen_test:
     path: ../dogma-codegen-test
-dependency_overrides:
-  dogma_convert:
-    path: ../dogma-convert
-transformers:
-- test/pub_serve:
-    $include: test/**_test{.*,}.dart
