--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,5 @@ doc/api/
 # (Library packages only! Remove pattern if developing an application package)
 pubspec.lock
 
-# WebStorm files
+# IntelliJ files
 .idea/
