--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,17 @@
 
 # Files and directories created by pub
 .buildlog
-.dart_tool
 .packages
 .project
 .pub/
 /build/
 **/packages/
 
+# Directories created by build
+.dart_tool
+
 # Files created by dart2js
-# (Most Dart developers will use pub build to compile Dart, use/modify these 
+# (Most Dart developers will use pub build to compile Dart, use/modify these
 #  rules if you intend to use dart2js directly
 #  Convention is to use extension '.dart.js' for Dart compiled to Javascript to
 #  differentiate from explicit Javascript files)
@@ -23,12 +25,18 @@
 # Directory created by dartdoc
 doc/api/
 
-# Don't commit pubspec lock file 
+# Don't commit pubspec lock file
 # (Library packages only! Remove pattern if developing an application package)
 pubspec.lock
 
 # IntelliJ files
+*.iml
+*.ipr
+*.iws
 .idea/
 
-# Outputted test files
-/test/lib/
+# Mac
+.DS_Store
+
+# Generated files
+/test/lib
